# FastAPI_demo

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
docker/: app.sh  celery.sh
src/: config.py  database.py  exceptions.py  logger.py  main.py
src/admin/: auth.py  views.py
src/bookings/: dao.py  router.py  schemas.py
src/dao/: base.py
src/hotels/: dao.py  models.py  router.py
src/images/: router.py
src/migrations/: env.py
src/migrations/versions/: 438be4d23329_add_tables.py  4b3fd8492ac8_initial_migration.py  a378872ade60_add_tables_2.py
src/tasks/: celery.py  email_templates.py  tasks.py
src/tests/: conftest.py
src/tests/integration_tests/test_bookings/: test_api.py  test_dao.py
src/tests/integration_tests/test_users/: test_api.py
src/tests/unit_tests/test_users/: test_dao.py
src/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
